test3-2022-12-10.log
regress/test3.fir:166372:5: error: firrtl.constant attribute has wrong sign
    wire _tmp3120: UInt<15>
    ^
regress/test3.fir:166372:5: note: see current operation: %8 = "firrtl.constant"() {value = -12133 : si15} : () -> !firrtl.uint<15>
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 26.1821 seconds

  ----User Time----  ----Wall Time----  ----Name----
    4.2580 (  9.2%)    4.2580 ( 16.3%)  FIR Parser
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse OMIR
    3.2833 (  7.1%)    3.2833 ( 12.5%)    Parse modules
    0.9257 (  2.0%)    0.9257 (  3.5%)    Verify circuit
   41.5728 ( 90.2%)   21.6565 ( 82.7%)  'firrtl.circuit' Pipeline
    0.9031 (  2.0%)    0.9031 (  3.4%)    LowerFIRRTLAnnotations
    4.1638 (  9.0%)    2.2575 (  8.6%)    'firrtl.module' Pipeline
    1.3023 (  2.8%)    0.7039 (  2.7%)      DropName
    2.8614 (  6.2%)    1.5536 (  5.9%)      CSE
    0.0000 (  0.0%)    0.0000 (  0.0%)        (A) DominanceInfo
    0.0000 (  0.0%)    0.0000 (  0.0%)    InjectDUTHierarchy
    0.1589 (  0.3%)    0.0866 (  0.3%)    'firrtl.module' Pipeline
    0.1588 (  0.3%)    0.0866 (  0.3%)      LowerCHIRRTLPass
    0.2784 (  0.6%)    0.2784 (  1.1%)    InferWidths
    0.8903 (  1.9%)    0.8903 (  3.4%)    MemToRegOfVec
    1.4549 (  3.2%)    1.4549 (  5.6%)    InferResets
    0.1688 (  0.4%)    0.1688 (  0.6%)      (A) circt::firrtl::InstanceGraph
    0.2542 (  0.6%)    0.2542 (  1.0%)    WireDFT
    1.2689 (  2.8%)    0.6891 (  2.6%)    'firrtl.module' Pipeline
    1.2688 (  2.8%)    0.6890 (  2.6%)      FlattenMemory
    1.4209 (  3.1%)    1.4209 (  5.4%)    LowerFIRRTLTypes
    4.8082 ( 10.4%)    2.7087 ( 10.3%)    'firrtl.module' Pipeline
    3.5330 (  7.7%)    1.9488 (  7.4%)      ExpandWhens
    1.2751 (  2.8%)    0.7598 (  2.9%)      SFCCompat
    1.8173 (  3.9%)    1.8173 (  6.9%)    Inliner
    1.4967 (  3.2%)    0.8226 (  3.1%)    'firrtl.module' Pipeline
    1.4967 (  3.2%)    0.8226 (  3.1%)      RandomizeRegisterInit
    1.2750 (  2.8%)    1.2750 (  4.9%)    CheckCombCycles
    0.2618 (  0.6%)    0.2618 (  1.0%)      (A) circt::firrtl::InstanceGraph
    8.0199 ( 17.4%)    4.3854 ( 16.7%)    'firrtl.module' Pipeline
    7.6627 ( 16.6%)    4.1866 ( 16.0%)      Canonicalizer
    0.3572 (  0.8%)    0.1987 (  0.8%)      InferReadWrite
    0.1584 (  0.3%)    0.1584 (  0.6%)    PrefixModules
    0.0631 (  0.1%)    0.0631 (  0.2%)      (A) circt::firrtl::InstanceGraph
    0.0000 (  0.0%)    0.0000 (  0.0%)      (A) circt::firrtl::NLATable
    0.5743 (  1.2%)    0.5743 (  2.2%)    IMConstProp
    0.2676 (  0.6%)    0.2676 (  1.0%)  Rest
   46.0985 (100.0%)   26.1821 (100.0%)  Total

{
  totalTime: 26.223,
  maxMemory: 1048698880
}
